--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
 </head>
 <body>
     <div class="container">
-        <div class="display">0</div>
+        <div class="display"></div>
         <div class="calc-buttons">
             <div class="row">
                 <button class="clear">AC</button>
                 <!-- <button class="plus-or-minus">+/-</button> -->
-                <button class="operator">%</button>
-                <button class="operator">/</button>
+                <button class="operator mod">%</button>
+                <button class="operator divide">/</button>
             </div>
             <div class="row">
                 <button class="digit">7</button>
                 <button class="digit">8</button>
                 <button class="digit">9</button>
-                <button class="operator">x</button>
+                <button class="operator multiply">x</button>
             </div>
             <div class="row">
                 <button class="digit">4</button>
                 <button class="digit">5</button>
                 <button class="digit">6</button>
-                <button class="operator">-</button>
+                <button class="operator subtract">-</button>
             </div>
             <div class="row">
                 <button class="digit">1</button>
                 <button class="digit">2</button>
                 <button class="digit">3</button>
-                <button class="operator">+</button>
+                <button class="operator plus">+</button>
             </div>
             <div class="row">
                 <button class="digit zero">0</button>
