--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="row">
                 <button class="clear">AC</button>
                 <!-- <button class="plus-or-minus">+/-</button> -->
-                <button class="operator mod">%</button>
+                <button class="operator percentage mod">%</button>
                 <button class="operator divide">/</button>
             </div>
             <div class="row">
