--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="calc-buttons">
             <div class="row">
                 <button class="clear">AC</button>
-                <button class="operator plus-or-minus">+/-</button>
+                <!--<button class="operator plus-or-minus">+/-</button> -->
                 <button class="operator percentage mod">%</button>
                 <button class="operator divide">/</button>
             </div>
